--- a/.github/workflows/build-css.yml
+++ b/.github/workflows/build-css.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - run: npm install --with=dev
 #       - run: npm ci
       - run: npm run build --if-present
 #       - run: npm test
