--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "rollup": "^2.67.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-uglify": "^6.0.4",
+    "rollup-plugin-uglify": "github:ryanwillis/rollup-plugin-uglify#ff91f958935946798879035eb6afd985ad5ed01d",
     "sass": "^1.49.7",
     "sass-mq": "^6.0.0",
     "stylelint": "^14.5.0"
