--- a/.github/workflows/build-static.yml
+++ b/.github/workflows/build-static.yml
@@ -17,6 +17,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        run: git pull
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
